Fixed bug that caused volume slider bar to be visible between the edge of the screen and the volume button.

--- a/styles.css
+++ b/styles.css
@@ -148,10 +148,10 @@ nav ul {
     padding: 0px;
 
     position: absolute;
-    right: 0rem;
+    right: 2rem;
 
-    transition-property: width, right;
-    transition-duration: 0.5s, 0.55s;
+    transition-property: width;
+    transition-duration: 0.2s;
 }
 
 .volumeBar-visible {
